--- a/_config.yml
+++ b/_config.yml
@@ -35,22 +35,22 @@ subtitle: Your awesome subtitle
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for a Jekyll theme version of
   HTML5 UP's sleek, responsive site template Prologue.
-author: Your Incredible Name
-email: your-email@example.com
+author: Dariush Ghasemi
+email: ghasemi.dariush@yahoo.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
 baseurl: "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: "https://dariushghasemi.github.io/" # the base hostname & protocol for your site
 
 # Social settings
 # Make sure to include the full url including protocol, e.g. https://github.com/chrisbobbe
-twitter_url:
-facebook_url:
-googleplus_url:
+twitter_url: "https://twitter.com/dariush_ghasemi"
+facebook_url: 
+trainckdis_url: "https://www.trainckdis.eu/consortium/fellows/dariush-ghasemi"
 instagram_url:
-linkedin_url:
-github_url:
+linkedin_url: "https://www.linkedin.com/in/dariushghasemi/"
+github_url: "https://github.com/dariushghasemi/"
 stackoverflow_url:
 pinterest_url:
 slack_url:
