--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
 title: A.P
-baseurl: "/ap"
-url: "https://kssim.github.io"
+baseurl: #"/ap"
+url: "https://dariushghasemi.github.io/"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
 # Author
 author:
-  name: KyeongSeob Sim
-  desc: Hello nice to meet you
-  email: ksub0912@gmail.com
+  name: Dariush Ghasemi
+  desc: Welcome to my website!
+  email: ghasemi.dariush@yahoo.com
   selfie: assets/img/profile.jpg
 
 # social
@@ -17,23 +17,19 @@ social:
   behance:
   bitbucket:
   dribbble:
-  facebook: Test
+  facebook: 
   flickr:
-  github: kssim
+  github: https://github.com/dariushghasemi/
   google_plus:
   instagram:
   keybase:
-  linkedin: https://www.linkedin.com/in/kssim/ 
+  linkedin: https://www.linkedin.com/in/dariushghasemi/ 
   pinterest:
   reddit:
   soundcloud:
-  stack_exchange:
-  steam:
-  tumblr:
   gitlab:
-  twitter: Test
-  vimeo:
-  wordpress:
+  twitter: https://twitter.com/dariush_ghasemi
+  trainckdis_url: https://www.trainckdis.eu/consortium/fellows/dariush-ghasemi
   youtube:
   default_txt: "Follow On"
 
