--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author:
   name: Dariush Ghasemi
   desc: Welcome to my website!
   email: ghasemi.dariush@yahoo.com
-  selfie: assets/img/profile.jpg
+  selfie: assets/img/photohandler.jpg
 
 # social
 social:
