--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social:
   dribbble:
   facebook: 
   flickr:
-  github: https://github.com/dariushghasemi/
+  github: dariushghasemi/
   google_plus:
   instagram:
   keybase:
@@ -28,7 +28,7 @@ social:
   reddit:
   soundcloud:
   gitlab:
-  twitter: https://twitter.com/dariush_ghasemi
+  twitter: dariush_ghasemi
   trainckdis_url: https://www.trainckdis.eu/consortium/fellows/dariush-ghasemi
   youtube:
   default_txt: "Follow On"
