--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: A.P
-baseurl: #"/ap"
+title: D.G
+baseurl: #"/dg"
 url: "https://dariushghasemi.github.io/"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
 # Author
 author:
   name: Dariush Ghasemi
-  desc: Welcome to my website!
+  desc: Follow me on my social media!
   email: ghasemi.dariush@yahoo.com
   selfie: assets/img/photohandler.jpg
 
