--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author:
   name: Dariush Ghasemi
   desc: Follow me on my social media!
   email: ghasemi.dariush@yahoo.com
-  selfie: assets/img/photohandler.jpg
+  selfie: assets/img/DGhasemi_July_2023.jpg
 
 # social
 social:
